[package]
name = "atw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mongodb = "2"
serde = "1"
serde_json = "1"
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "uuid"]}
diesel_migrations = "1.4"
uuid = {version = "0.6.5", features = ["v4"]}
anyhow = "1"
